--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,18 +2,14 @@ body{
     background-color: bisque;
 }
 
-
-
-nav{
-    z-index: 1;
+.navbar-brand{
+    font-size: 30px;
+    margin-left: 5%;
+    font-family:EBGaramond ;
+    text-shadow: 1px 1px 1px black;
     
-}
-nav img{
-    max-width: 100px;
-    max-height: 100px;
-    border-radius: 15px 0;
-}
 
+}
 
 #carouselExampleCaptions{
     width: 700px;
@@ -29,4 +25,16 @@ nav img{
     max-width: 500px;
     max-height: 400px;
     border-radius: 90px 0;
+}
+
+.card img{
+    max-width: 500px;
+}
+.card-deck{
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: auto;
+    gap: 20px;
 }
