--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,11 @@ body{
     margin: auto;
 }
 
+.carousel-item img{
+    border-radius: 5px 1000px ;
+    
+}
+
 .clearfix{
     max-width: 700px;
     margin: auto;
@@ -28,13 +33,11 @@ body{
 }
 
 .card img{
-    max-width: 500px;
+    max-width: 800px;
 }
 .card-deck{
-    
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    max-width: 900px;
     margin: auto;
     gap: 20px;
 }
