--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,23 +1,27 @@
+html {
+    box-sizing: border-box;
+  }
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+
 body{
-    background-color: bisque;
+    background-color: #b4bcc5;
 }
 
 .navbar-brand{
     font-size: 30px;
-    margin-left: 5%;
     font-family:EBGaramond ;
     text-shadow: 1px 1px 1px black;
-    
-
 }
 
 #carouselExampleCaptions{
-    width: 700px;
+    max-width: 700px;
     margin: auto;
 }
 
 .carousel-item img{
-    border-radius: 5px 1000px ;
+    border-radius: 50% ;
     
 }
 
@@ -40,4 +44,34 @@ body{
     max-width: 900px;
     margin: auto;
     gap: 20px;
+}
+@media (max-width: 375px) {
+    body{
+        background-color: #b4bcc5;
+        display: flex;
+        flex-direction: column;
+        max-width: 100vw;
+    }
+    
+    .carousel-item img{
+        border-radius: 100% ;
+        
+    }
+
+    .clearfix img{
+        max-width: 340px;
+        max-height: 400px;
+        border-radius: 50px 5px;
+    }
+
+    .clearfix p{
+        text-align: center;
+    }
+    .card-deck{
+        display: flex;
+        flex-direction: column;
+        max-width: 90%;
+        margin: auto;
+    }
+    
 }
