--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,7 +44,7 @@ body{
     margin: auto;
     gap: 20px;
 }
-@media (max-width:375px) {
+@media screen and (max-width:320px), (max-width:375px), (max-width:425px) {
     body{
         background-color: #b4bcc5;
         display: flex;
