--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,10 +18,16 @@ body{
 #carouselExampleCaptions{
     max-width: 700px;
     margin: auto;
+    transition: ease-in-out 0.3s;
+    
+    
+    
 }
 
+
 .carousel-item img{
-    border-radius: 50% ;    
+    margin: 0 auto;
+    border-radius: 100%;
 }
 
 .clearfix{
